# img4-dump

./: .gitignore  4cc.txt  Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
src/: crypto.rs  decompress_lzfse.rs  decompress_lzss.rs  formatter.rs  fourcc.rs  main.rs  parse.rs  util.rs
tests/: auto.rs  cli.rs
tests/common/: mod.rs
