[package]
name = "img4-dump"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Extracts payloads and metadata from IMG4/IM4P/IM4M; decrypts with user-supplied IV+Key; optional LZFSE/LZSS decompress."
repository = "https://example.invalid/img4-dump"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
once_cell = "1.19"

# DER parsing
der-parser = "9.0"

# AES (CTR/CBC)
aes = "0.8"
cipher = "0.4"
ctr = "0.9"          # for CTR (Ctr128BE)
cbc = "0.1"          # for CBC mode
block-padding = "0.3"
env_logger = "0.11.8"
log = "0.4.28"
atty = "0.2"

# Optional decompressors
# Note: Enable at build time: --features lzfse,lzss
[features]
default = []
lzfse = ["dep:lzfse"]
lzss  = ["dep:lzss"]

[dependencies.lzfse]
version = "0.2"
optional = true

[dependencies.lzss]
version = "0.9"
optional = true
