[package]
name = "img4-dump"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Extracts payloads and metadata from Apple IMG4/IM4P/IM4M/IM4R; decrypts with user-supplied IV+Key; optional LZFSE/LZSS decompress."
repository = "https://github.com/19h/img4-dump"
homepage = "https://github.com/19h/img4-dump"
readme = "readme.md"
keywords = ["img4", "im4p", "apple", "firmware", "ios"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
once_cell = "1.19"

# DER parsing
der-parser = "9.0"

# AES (CTR/CBC)
aes = "0.8"
cipher = "0.4"
ctr = "0.9"          # for CTR (Ctr128BE)
cbc = "0.1"          # for CBC mode
block-padding = "0.3"
env_logger = "0.11.8"
log = "0.4.28"
atty = "0.2"

# Optional decompressors
# Note: Enable at build time: --features lzfse,lzss
# lzfse uses the external (C-backed) lzfse crate; lzss is a self-contained native
# implementation of Apple's "complzss"/Okumura LZSS (no external dependency).
[features]
default = []
lzfse = ["dep:lzfse"]
lzss  = []

[dependencies.lzfse]
version = "0.2"
optional = true

# Used only by the integration tests to produce real AES ciphertext fixtures.
[dev-dependencies]
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
